# user_api

./: .gitignore  Dockerfile  Dockerfile.cloud  Dockerfile.lambda  README.md  app.py  docker-compose.yml  entrypoint.sh  lambda_handler.py  migrate_cloud_db.py  migrate_db.py  pyproject.toml  requirements.txt
api/: cognito_utils.py  db.py  main.py
api/cruds/: user.py
api/models/: user.py
api/repositories/: db_operations.py
api/routers/: user.py
api/schemas/: user.py
docs/structure/: api.md  db.md
